Fixed About Spacing

--- a/styles-about.css
+++ b/styles-about.css
@@ -4,12 +4,11 @@
     display: grid;
     grid-template-areas:
       "header header header header header"
-      ". . . . ."
       ". big-image big-image about-text ."
       ". . . . ."
       "footer footer footer footer footer";
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: minmax(58px, 68px) 1fr 1fr 1fr 50px;
+    grid-template-columns: 1fr fr 1fr 1fr;
+    grid-template-rows: minmax(58px, 68px) 2fr 1fr 50px;
     gap: 10px;
     width: 100%;
     /* max-width: 800px; */
