--- a/styles-more-photos.css
+++ b/styles-more-photos.css
@@ -1,19 +1,19 @@
 body {
-    margin: 0;
+    /* margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
+    background-color: #f0f0f0; */
   }
   
   .grid-container {
     display: grid;
     grid-template-areas:
       "header header"
-      "brothers-blessing ."
+      "brothers-blessing flipping-photo"
       "footer footer";
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: minmax(58px, 68px) 50% 50px;
+    grid-template-rows: minmax(58px, 68px) 100vh 50px;
     gap: 10px;
     width: 97%;
     /* max-width: 800px; */
@@ -84,6 +84,81 @@ body {
     height: 100%;
     object-fit: scale-down;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .more-photos-container {
+    grid-area: flipping-photo;
+    /* width: 200px;
+    height: 300px; */
+    /* perspective: 1000px; Enables 3D effect */
+    cursor: pointer;
+  }
+  
+  .photos-inner {
+    /* width: 100%;
+    height: 100%;
+    object-fit: scale-down; */
+    position: relative;
+    /* transform-style: preserve-3d;
+    transition: transform 0.6s; */
+  }
+  
+  .photo-front,
+  .photo-back {
+    position: absolute;
+    /* width: 100%;
+    height: 100%; */
+    backface-visibility: hidden; /* Hides the back when flipped */
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    color: #333; */
+  }
+  
+  .photo-front {
+    background-color: #fff;
+  }
+  
+  .photo-back {
+    background-color: #f0f0f0;
+    transform: rotateY(180deg);
+    color: #000;
+  }
+  
+  .flipped .photo-inner {
+    transform: rotateY(180deg);
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   
   .grid-footer {
     grid-area: footer;
